openshift/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: azure-document-intelligence-storage-pipeline
  labels:
    app: azure-document-intelligence-storage-pipeline
  annotations:
    haproxy.router.openshift.io/timeout: 3600s
spec:
  to:
    kind: Service
    name: azure-document-intelligence-storage-pipeline
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
